# platform_external_sonivox

./: Android.bp  CMakeLists.txt  LICENSE  OWNERS  README.md  README.md licence  TEST_MAPPING  sonivox-config.cmake.in  sonivox-static.pc.in  sonivox.pc.in
.github/workflows/: cmake.yml
arm-fm-22k/host_src/: eas.h  eas_build.h  eas_chorus.h  eas_config.h  eas_debugmsgs.h  eas_hostmm.c  eas_report.h
arm-fm-22k/lib_src/: eas_audioconst.h  eas_chorus.c  eas_fmengine.c  eas_fmsndlib.c  eas_fmsynth.c  eas_fmsynth.h  eas_imaadpcm.c  eas_imelody.c  eas_imelodydata.h  eas_midi.c  eas_miditypes.h  eas_mixbuf.c  eas_ota.c  eas_otadata.h  eas_pcm.c  eas_pcmdata.c  eas_public.c  eas_reverbdata.h  eas_rtttl.c  eas_rtttldata.c  eas_rtttldata.h  eas_smf.c  eas_sndlib.h  eas_voicemgt.c  eas_wavefile.h
arm-hybrid-22k/host_src/: eas_build.h  eas_config.c  eas_debugmsgs.h  eas_host.h  eas_main.c  eas_report.c  eas_types.h
arm-hybrid-22k/lib_src/: eas_chorusdata.h  eas_ctype.h  eas_data.c  eas_effects.h  eas_fmengine.h  eas_fmtables.c  eas_ima_tables.c  eas_math.h  eas_midi.h  eas_midictrl.h  eas_mixer.h  eas_otadata.c  eas_pan.c  eas_pan.h  eas_pcm.h  eas_pcmdata.h  eas_reverb.c  eas_smf.h  eas_smfdata.c  eas_synth.h  eas_synth_protos.h  eas_wavefile.c  eas_wavefiledata.c  eas_wtengine.c  eas_wtsynth.c  hybrid_22khz_mcu.c
arm-wt-22k/: Android.bp  Android.mk
arm-wt-22k/host_src/: eas.cmake  eas.h  eas_build.h  eas_host.h  eas_hostmm.c  eas_main.c  eas_reverb.h  eas_types.h  eas_wave.c  eas_wave.h  jet.h
arm-wt-22k/include/libsonivox/: eas.h  eas_chorus.h  eas_reverb.h  eas_types.h  jet.h
arm-wt-22k/jetcreator_lib_src/darwin-x86/: EASLib.c  EASLib.h  EASLibVst.c  eas_host_debug.h  eastestv37.c  wt_44khz.c
arm-wt-22k/lib_src/: ARM-E_filter_gnu.s  ARM-E_interpolate_loop_gnu.s  ARM-E_interpolate_noloop_gnu.s  ARM-E_mastergain_gnu.s  ARM-E_voice_gain_gnu.s  ARM_synth_constants_gnu.inc  dls.h  dls2.h  eas_chorusdata.c  eas_data.h  eas_dlssynth.c  eas_dlssynth.h  eas_flog.c  eas_imelody.c  eas_imelodydata.c  eas_math.c  eas_mdls.c  eas_mdls.h  eas_midi.c  eas_mididata.c  eas_mixer.c  eas_parser.h  eas_public.c  eas_reverbdata.c  eas_rtttl.c  eas_smf.c  eas_smfdata.h  eas_synthcfg.h  eas_tcdata.c  eas_tcdata.h  eas_tonecontrol.c  eas_vm_protos.h  eas_voicemgt.c  eas_wt_IPC_frame.h  eas_wtengine.c  eas_wtengine.h  eas_wtsynth.c  eas_wtsynth.h  eas_xmf.c  eas_xmf.h  (+5 more)
arm-wt-22k/misc/: eas_host.c
example/: CMakeLists.txt  sonivoxrender.c
fakes/log/: log.h
fakes/utils/: Log.h
test/: Android.bp  AndroidTest.xml  DynamicConfig.xml  README.md  SonivoxTest.cpp  SonivoxTestEnvironment.h
test/res/: ants.mid
